--- a/index.html
+++ b/index.html
@@ -85,7 +85,7 @@
         <!-- Company Logo -->
 
         <div class="company_logo">
-            <img src="img/logo/logo2.png" style="width: 100px; height: 100px;"></div>
+            <img src="img/logo/logo2.eps" style="width: 100px; height: 100px;"></div>
             <div class="company_name">iDigital Web Studio</div>
 
         <!-- Block_1_Main -->
