logo+animation done

--- a/Services/Ecommerce.html
+++ b/Services/Ecommerce.html
@@ -29,7 +29,8 @@
         rel="stylesheet">
     <link rel="icon" type="image/png" href="../img/cloud-256x256.png">
     <link rel="stylesheet" href="../css/services_subpage_style.css">
-    <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/animate.css/4.1.1/animate.min.css" />
+    <link rel="stylesheet" href="../css/fadeBlock.css">
+    <link rel="stylesheet" media="all" href="../css/animate.css">
     <title>eCommerce</title>
 </head>
 
@@ -74,9 +75,9 @@
         </header>
 
         <div class="company_logo">
-            <img src='../img/cloud-256x256.png' width=50px />
+            <img src='../img/logo/iDigitalLogo.svg' width=250px />
         </div>
-        <div class="company_name">iDigital Web Studio</div>
+        <!-- <div class="company_name">iDigital Web Studio</div> -->
 
 
         <!-- Breadcrumbs -->
@@ -102,13 +103,13 @@
 
         <div class="block_1_row">
 
-            <div class="block_1_column_2">
+            <div class="block_1_column_2 fadeInUp animated">
                 <div class="block_1_image">
                     <img src='../img/img_315.jpg' width=100% />
                 </div>
             </div>
 
-            <div class="block_1_column_1">
+            <div class="block_1_column_1 fadeInUp animated">
                 <div class="block_1_header">
                     <h4> Need a New Digital Strategy? </h6>
                 </div>
@@ -130,13 +131,13 @@
 
         <div class="block_1_row">
             <div class="block_1_column_3">
-                <div class="block_1_text">
+                <div class="block_1_text fadeInUp animated">
                     <p> To create an online store, we perform a detailed study of company needs, determining
                         what should be achieved by its online representation. This is how we find the optimal solutions
                         targeted at a specific niche. Even on store design stage, best practices are ipmplemented to
                         increasen the number of sales and requests from the site. </p>
 
-                    <div class="list_1">
+                    <div class="list_1 fadeInUp animated">
                         <h4 class="headerStyle"> Advantages of eCommerce: </h4>
                         <ul>
                             <li> Faster buying/selling procedure, as well as easy to find products </li>
@@ -156,7 +157,7 @@
 
         <!-- Block_2 -->
 
-        <div class="slideshow-container">
+        <div class="slideshow-container fadeInUp animated">
 
             <div class="reviewHeader">What People Say About Us</div>
 
@@ -194,7 +195,7 @@
 
         </div>
 
-        <div class="dot-container">
+        <div class="dot-container fadeInUp animated">
             <span class="dot" onclick="currentSlide(1)"></span>
             <span class="dot" onclick="currentSlide(2)"></span>
             <span class="dot" onclick="currentSlide(3)"></span>
@@ -239,6 +240,12 @@
     </div>
 
 
+    <!--===============================================================================================-->
+    <script src="../scripts/wow.min.js"></script>
+    <!--===============================================================================================-->
+    <script>new WOW().init();</script>
+    <!--===============================================================================================-->
+    <script src="../scripts/fadeBlock.js"></script>
     <!--===============================================================================================-->
     <script src="https://ajax.googleapis.com/ajax/libs/jquery/3.5.1/jquery.min.js"></script>
     <!--===============================================================================================-->
