--- a/Services/SEO_optimization.html
+++ b/Services/SEO_optimization.html
@@ -29,7 +29,8 @@
         rel="stylesheet">
     <link rel="icon" type="image/png" href="../img/cloud-256x256.png">
     <link rel="stylesheet" href="../css/services_subpage_style.css">
-    <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/animate.css/4.1.1/animate.min.css" />
+    <link rel="stylesheet" href="../css/fadeBlock.css">
+    <link rel="stylesheet" media="all" href="../css/animate.css">
     <title>SEO Optimization</title>
 </head>
 
@@ -40,8 +41,6 @@
         <!--Header-->
 
         <header class="header" id="myHeader">
-
-            <a href="#" id="scroll_top11" title="Наверх"></a>
 
             <!--Right-Sided Navigation-->
 
@@ -76,9 +75,9 @@
         </header>
 
         <div class="company_logo">
-            <img src='../img/cloud-256x256.png' width=50px />
+            <img src='../img/logo/iDigitalLogo.svg' width=250px />
         </div>
-        <div class="company_name">iDigital Web Studio</div>
+        <!-- <div class="company_name">iDigital Web Studio</div> -->
 
 
 
@@ -106,13 +105,13 @@
 
         <div class="block_1_row">
 
-            <div class="block_1_column_2">
+            <div class="block_1_column_2 fadeInUp animated">
                 <div class="block_1_image">
                     <img src='../img/img_311.jpg' width=100% />
                 </div>
             </div>
 
-            <div class="block_1_column_1">
+            <div class="block_1_column_1 fadeInUp animated">
                 <div class="block_1_header">
                     <h4>We Will Bring Your Website to the Top of Search Results</h4>
                 </div>
@@ -142,7 +141,7 @@
 
         <div class="block_1_row">
             <div class="block_1_column_3">
-                <div class="block_1_text">
+                <div class="block_1_text fadeInUp animated">
                     <p>
                         SEO - it's a long term asset. It will take from couple of weeks up to three month of work to
                         reach the top.
@@ -153,7 +152,7 @@
                         for months or even years! We will optimize your website for new search algorithms in order to
                         maintain top-positions.
                     </p>
-                    <div class="list_1">
+                    <div class="list_1 fadeInUp animated">
                         <h4 class="headerStyle">How We Do This:</h4>
                         <ul>
                             <li> Website audit </li>
@@ -174,7 +173,7 @@
 
         <!-- Block_2 -->
 
-        <div class="slideshow-container">
+        <div class="slideshow-container fadeInUp animated">
 
             <div class="reviewHeader">What People Say About Us</div>
 
@@ -212,7 +211,7 @@
 
         </div>
 
-        <div class="dot-container">
+        <div class="dot-container fadeInUp animated">
             <span class="dot" onclick="currentSlide(1)"></span>
             <span class="dot" onclick="currentSlide(2)"></span>
             <span class="dot" onclick="currentSlide(3)"></span>
@@ -257,6 +256,12 @@
     </div>
 
 
+    <!--===============================================================================================-->
+    <script src="../scripts/wow.min.js"></script>
+    <!--===============================================================================================-->
+    <script>new WOW().init();</script>
+    <!--===============================================================================================-->
+    <script src="../scripts/fadeBlock.js"></script>
     <!--===============================================================================================-->
     <script src="https://ajax.googleapis.com/ajax/libs/jquery/3.5.1/jquery.min.js"></script>
     <!--===============================================================================================-->
