--- a/Services.html
+++ b/Services.html
@@ -27,7 +27,8 @@
     <script src="https://code.jquery.com/jquery-3.5.1.min.js"
         integrity="sha256-9/aliU8dGd2tb6OSsuzixeV4y/faTqgFtohetphbbj0=" crossorigin="anonymous"></script>
     <!--===============================================================================================-->
-    <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/animate.css/4.1.1/animate.min.css" />
+    <link rel="stylesheet" href="css/fadeBlock.css">
+    <link rel="stylesheet" media="all" href="css/animate.css">
     <title>Services</title>
 </head>
 
@@ -72,9 +73,9 @@
         </header>
 
         <div class="company_logo">
-            <img src='../img/cloud-256x256.png' width=50px />
+            <img src='img/logo/iDigitalLogo.svg' width=250px />
         </div>
-        <div class="company_name">iDigital Web Studio</div>
+        <!-- <div class="company_name">iDigital Web Studio</div> -->
 
 
         <!-- Breadcrumbs -->
@@ -95,7 +96,7 @@
 
         <!-- Block_1 -->
 
-        <div class="block_1_container">
+        <div class="block_1_container fadeInUp animated">
             <div class="block_1_row">
 
                 <div class="block_1_icon">
@@ -105,11 +106,13 @@
                     <div class="box-wrap">
                         <div class="box_header">
                             <div><a href='Services/Marketing.html'
-                                    class="mybutton__text mybutton mybutton--animate-click-three">Digital Marketing</a></div>
+                                    class="mybutton__text mybutton mybutton--animate-click-three">Digital Marketing</a>
+                            </div>
                         </div>
                         <div class="box_text">
                             <br>
-                            <p> We analyze the field and  your competitors, create strong marketing programs using strategic 
+                            <p> We analyze the field and your competitors, create strong marketing programs using
+                                strategic
                                 marketing tactics that have been proven to work </p></br>
                         </div>
                     </div>
@@ -123,11 +126,12 @@
                     <div class="box-wrap">
                         <div class="box_header">
                             <div><a href='Services/Development.html'
-                                    class="mybutton__text mybutton mybutton--animate-click-three">Web Development</a></div>
+                                    class="mybutton__text mybutton mybutton--animate-click-three">Web Development</a>
+                            </div>
                         </div>
                         <div class="box_text">
                             <br>
-                            <p> On a turnkey basis we develop: online stores, landing pages, business card websites, 
+                            <p> On a turnkey basis we develop: online stores, landing pages, business card websites,
                                 corporate websites, portals, and individual solutions of any complexity </p></br>
                         </div>
                     </div>
@@ -145,7 +149,7 @@
                         </div>
                         <div class="box_text">
                             <br>
-                            <p> Correct layout of interface elements and user-friendly intuitive design are vital. 
+                            <p> Correct layout of interface elements and user-friendly intuitive design are vital.
                                 We will create unique UI/UX design adjusted for your business needs</p>
                             </br>
                         </div>
@@ -164,7 +168,7 @@
                         </div>
                         <div class="box_text">
                             <br>
-                            <p> Optimizing our web designs to rank on the first page of Google is our specialty. 
+                            <p> Optimizing our web designs to rank on the first page of Google is our specialty.
                                 We will secure new leads for your business for a long-term period </p>
                             </br>
                         </div>
@@ -182,7 +186,8 @@
                         </div>
                         <div class="box_text">
                             <br>
-                            <p> We develop the structure and implement a unique design for your project following your requirements until 
+                            <p> We develop the structure and implement a unique design for your project following your
+                                requirements until
                                 you are completely satisfied </p></br>
                         </div>
                     </div>
@@ -199,7 +204,7 @@
                         </div>
                         <div class="box_text">
                             <br>
-                            <p> Logos of any complexity that will make even the most demanding client happy. 
+                            <p> Logos of any complexity that will make even the most demanding client happy.
                                 We also create banners, slogans, promotional materials, etc... </p></br>
                         </div>
                     </div>
@@ -230,7 +235,7 @@
                             <img src='img/icons/dark_icon_2.png'>
                         </div>
                         <a class="email-text" style="font-size: 14pt"
-                        href="mailto:sales@idigitalstudio.ca">sales@idigitalstudio.ca</a>
+                            href="mailto:sales@idigitalstudio.ca">sales@idigitalstudio.ca</a>
                     </div>
                     <div class="footerColumn">
                         <div class="footer_icon_wrap">
@@ -245,6 +250,12 @@
     </div>
 
 
+    <!--===============================================================================================-->
+    <script src="../scripts/wow.min.js"></script>
+    <!--===============================================================================================-->
+    <script>new WOW().init();</script>
+    <!--===============================================================================================-->
+    <script src="../scripts/fadeBlock.js"></script>
     <!--===============================================================================================-->
     <script src="https://ajax.googleapis.com/ajax/libs/jquery/3.5.1/jquery.min.js"></script>
     <!--===============================================================================================-->
