--- a/Services/Branding.html
+++ b/Services/Branding.html
@@ -29,7 +29,8 @@
         rel="stylesheet">
     <link rel="icon" type="image/png" href="../img/cloud-256x256.png">
     <link rel="stylesheet" href="../css/services_subpage_style.css">
-    <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/animate.css/4.1.1/animate.min.css" />
+    <link rel="stylesheet" href="../css/fadeBlock.css">
+    <link rel="stylesheet" media="all" href="../css/animate.css">
     <title>Branding</title>
 </head>
 
@@ -74,9 +75,9 @@
         </header>
 
         <div class="company_logo">
-            <img src='../img/cloud-256x256.png' width=50px />
+            <img src='../img/logo/iDigitalLogo.svg' width=250px />
         </div>
-        <div class="company_name">iDigital Web Studio</div>
+        <!-- <div class="company_name">iDigital Web Studio</div> -->
 
 
         <!-- Breadcrumbs -->
@@ -102,13 +103,13 @@
 
         <div class="block_1_row">
 
-            <div class="block_1_column_2">
+            <div class="block_1_column_2 fadeInUp animated">
                 <div class="block_1_image">
                     <img src='../img/img_314.jpg' width=100% />
                 </div>
             </div>
 
-            <div class="block_1_column_1">
+            <div class="block_1_column_1 fadeInUp animated">
                 <div class="block_1_header">
                     <h4> Need a Fresh Way to Grab Attention of Your Customers or Find New Ones? </h4>
                 </div>
@@ -129,7 +130,7 @@
 
         <div class="block_1_row">
             <div class="block_1_column_3">
-                <div class="block_1_text">
+                <div class="block_1_text fadeInUp animated">
 
                     <p> It is important to understand the concept of a brand in order to understand what branding
                         exactly is. A brand is the "image" or reputation of the product or service that customer
@@ -140,7 +141,7 @@
                         unique image for a product in consumer’s mind. By creating a brand, you market a
                         promise that explains what your customers should expect from your products and services. </p>
 
-                    <div class="list_1">
+                    <div class="list_1 fadeInUp animated">
                         <h4 class="headerStyle"> We Provide Full Range of Branding Services: </h4>
                         <ul>
                             <li> Logo design </li>
@@ -159,7 +160,7 @@
 
         <!-- Block_2 -->
 
-        <div class="slideshow-container">
+        <div class="slideshow-container fadeInUp animated">
 
             <div class="reviewHeader">What People Say About Us</div>
 
@@ -197,7 +198,7 @@
 
         </div>
 
-        <div class="dot-container">
+        <div class="dot-container fadeInUp animated">
             <span class="dot" onclick="currentSlide(1)"></span>
             <span class="dot" onclick="currentSlide(2)"></span>
             <span class="dot" onclick="currentSlide(3)"></span>
@@ -244,6 +245,12 @@
     </div>
 
 
+        <!--===============================================================================================-->
+        <script src="../scripts/wow.min.js"></script>
+        <!--===============================================================================================-->
+        <script>new WOW().init();</script>
+        <!--===============================================================================================-->
+        <script src="../scripts/fadeBlock.js"></script>
     <!--===============================================================================================-->
     <script src="https://ajax.googleapis.com/ajax/libs/jquery/3.5.1/jquery.min.js"></script>
     <!--===============================================================================================-->
