--- a/Services/Development.html
+++ b/Services/Development.html
@@ -27,9 +27,10 @@
     <meta name="format-detection" content="telephone=no">
     <link href="https://fonts.googleapis.com/css?family=Montserrat:300,400,500,700&display=swap&subset=cyrillic"
         rel="stylesheet">
-    <link rel="icon" type="image/png" href="../img/cloud-256x256.png">
     <link rel="stylesheet" href="../css/services_subpage_style.css">
-    <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/animate.css/4.1.1/animate.min.css" />
+    <link rel="stylesheet" href="../css/fadeBlock.css">
+    <link rel="stylesheet" media="all" href="../css/animate.css">
+
     <title>Development</title>
 </head>
 
@@ -74,9 +75,9 @@
         </header>
 
         <div class="company_logo">
-            <img src='../img/cloud-256x256.png' width=50px />
+            <img src='../img/logo/iDigitalLogo.svg' width=250px />
         </div>
-        <div class="company_name">iDigital Web Studio</div>
+        <!-- <div class="company_name">iDigital Web Studio</div> -->
 
 
         <!-- Breadcrumbs -->
@@ -102,13 +103,13 @@
 
         <div class="block_1_row">
 
-            <div class="block_1_column_2">
+            <div class="block_1_column_2  fadeInUp animated">
                 <div class="block_1_image">
                     <img src='../img/img_310.jpg' width=100% />
                 </div>
             </div>
 
-            <div class="block_1_column_1">
+            <div class="block_1_column_1  fadeInUp animated">
                 <div class="block_1_header">
                     <h4> Make Website Your Digital Asset </h4>
                 </div>
@@ -131,7 +132,7 @@
 
         <div class="block_1_row">
             <div class="block_1_column_3">
-                <div class="block_1_text">
+                <div class="block_1_text fadeInUp animated">
                     <p>Your customers want to find and do business with your organization completely online,
                         so bringing your business online isn’t a choice — it’s a necessity. The more value you are able
                         to provide through digital channels, the higher chances that you will remain relevant to your
@@ -140,7 +141,7 @@
                         and valuable user experiences, and engineering highly efficient web-and-mobile-native systems.
                         We make sure you outstand from competitors with unique design and user-friendly interface. </p>
 
-                    <div class="list_1">
+                    <div class="list_1 fadeInUp animated">
                         <h4 class="headerStyle"> Our Websites - It's Always Complex Approach </h4>
                         <ul>
                             <li> Landing pages </li>
@@ -160,7 +161,7 @@
 
         <!-- Block_2 -->
 
-        <div class="slideshow-container">
+        <div class="slideshow-container  fadeInUp animated">
 
             <div class="reviewHeader">What People Say About Us</div>
 
@@ -198,7 +199,7 @@
 
         </div>
 
-        <div class="dot-container">
+        <div class="dot-container fadeInUp animated">
             <span class="dot" onclick="currentSlide(1)"></span>
             <span class="dot" onclick="currentSlide(2)"></span>
             <span class="dot" onclick="currentSlide(3)"></span>
@@ -243,6 +244,12 @@
     </div>
 
 
+    <!--===============================================================================================-->
+    <script src="../scripts/wow.min.js"></script>
+    <!--===============================================================================================-->
+    <script>new WOW().init();</script>
+    <!--===============================================================================================-->
+    <script src="../scripts/fadeBlock.js"></script>
     <!--===============================================================================================-->
     <script src="https://ajax.googleapis.com/ajax/libs/jquery/3.5.1/jquery.min.js"></script>
     <!--===============================================================================================-->
