--- a/Services/Marketing.html
+++ b/Services/Marketing.html
@@ -27,9 +27,9 @@
     <meta name="format-detection" content="telephone=no">
     <link href="https://fonts.googleapis.com/css?family=Montserrat:300,400,500,700&display=swap&subset=cyrillic"
         rel="stylesheet">
-    <link rel="icon" type="image/png" href="../img/cloud-256x256.png">
     <link rel="stylesheet" href="../css/services_subpage_style.css">
-    <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/animate.css/4.1.1/animate.min.css" />
+    <link rel="stylesheet" href="../css/fadeBlock.css">
+    <link rel="stylesheet" media="all" href="../css/animate.css">
     <title>Digital Marketing</title>
 </head>
 
@@ -74,9 +74,9 @@
         </header>
 
         <div class="company_logo">
-            <img src='../img/cloud-256x256.png' width=50px />
+            <img src='../img/logo/iDigitalLogo.svg' width=250px />
         </div>
-        <div class="company_name">iDigital Web Studio</div>
+        <!-- <div class="company_name">iDigital Web Studio</div> -->
 
 
         <!-- Breadcrumbs -->
@@ -101,13 +101,13 @@
         <!-- Block_1 -->
         <div class="block_1_row">
 
-            <div class="block_1_column_2">
+            <div class="block_1_column_2 fadeInUp animated">
                 <div class="block_1_image">
                     <img src='../img/img_312.jpg' width=100% />
                 </div>
             </div>
 
-            <div class="block_1_column_1">
+            <div class="block_1_column_1 fadeInUp animated">
                 <div class="block_1_header">
                     <h4>Outstand - is Always a Win-Win Strategy</h4>
                 </div>
@@ -135,7 +135,7 @@
 
         <div class="block_1_row">
             <div class="block_1_column_3">
-                <div class="block_1_text">
+                <div class="block_1_text fadeInUp animated">
 
                     <p>
                         Complex digital marketing service for business involves use of all existing web channels to
@@ -149,7 +149,7 @@
                         and business needs.
                     </p>
 
-                    <div class="list_1">
+                    <div class="list_1 fadeInUp animated">
                         <h4 class="headerStyle">Our Digital Marketing Services</h4>
                         <ul>
                             <li> Analytics </li>
@@ -171,7 +171,7 @@
 
         <!-- Block_2 -->
 
-        <div class="slideshow-container">
+        <div class="slideshow-container fadeInUp animated">
 
             <div class="reviewHeader">What People Say About Us</div>
 
@@ -209,7 +209,7 @@
 
         </div>
 
-        <div class="dot-container">
+        <div class="dot-container fadeInUp animated">
             <span class="dot" onclick="currentSlide(1)"></span>
             <span class="dot" onclick="currentSlide(2)"></span>
             <span class="dot" onclick="currentSlide(3)"></span>
@@ -254,6 +254,12 @@
     </div>
 
 
+    <!--===============================================================================================-->
+    <script src="../scripts/wow.min.js"></script>
+    <!--===============================================================================================-->
+    <script>new WOW().init();</script>
+    <!--===============================================================================================-->
+    <script src="../scripts/fadeBlock.js"></script>
     <!--===============================================================================================-->
     <script src="https://ajax.googleapis.com/ajax/libs/jquery/3.5.1/jquery.min.js"></script>
     <!--===============================================================================================-->
