--- a/Services/Development.html
+++ b/Services/Development.html
@@ -27,10 +27,15 @@
     <meta name="format-detection" content="telephone=no">
     <link href="https://fonts.googleapis.com/css?family=Montserrat:300,400,500,700&display=swap&subset=cyrillic"
         rel="stylesheet">
+    <!--===============================================================================================-->
+    <link rel="icon" type="image/png" href="../img/logo/favicon.png">
+    <!--===============================================================================================-->
     <link rel="stylesheet" href="../css/services_subpage_style.css">
+    <!--===============================================================================================-->
     <link rel="stylesheet" href="../css/fadeBlock.css">
+    <!--===============================================================================================-->
     <link rel="stylesheet" media="all" href="../css/animate.css">
-
+    <!--===============================================================================================-->
     <title>Development</title>
 </head>
 
@@ -66,8 +71,8 @@
                 <li><a href="../Works.html">Works</a></li>
                 <li><a href='../ContactFrom_v6/Contacts.html' target="_blank">Contact</a></li>
                 <li class="phone_navbar">
-                    <span class="phone_highlight"> +1-111</span>
-                    <span>-111-1111 </span>
+                    <span class="phone_highlight"> +1-647</span>
+                    <span>-676-3661 </span>
                 </li>
             </ul>
             </nav>
