--- a/About.html
+++ b/About.html
@@ -27,10 +27,15 @@
     <meta name="format-detection" content="telephone=no">
     <link href="https://fonts.googleapis.com/css?family=Montserrat:300,400,500,700&display=swap&subset=cyrillic"
         rel="stylesheet">
-    <link rel="icon" type="image/png" href="img/cloud-256x256.png">
+    <!--===============================================================================================-->
+    <link rel="icon" type="image/png" href="img/logo/favicon.png">
+    <!--===============================================================================================-->
     <link rel="stylesheet" href="css/about_style.css">
+    <!--===============================================================================================-->
     <link rel="stylesheet" href="css/fadeBlock.css">
+    <!--===============================================================================================-->
     <link rel="stylesheet" media="all" href="css/animate.css">
+    <!--===============================================================================================-->
     <title>About</title>
 </head>
 
