--- a/Portfolio/Bookstore.html
+++ b/Portfolio/Bookstore.html
@@ -27,9 +27,13 @@
     <meta name="format-detection" content="telephone=no">
     <link href="https://fonts.googleapis.com/css?family=Montserrat:300,400,500,700&display=swap&subset=cyrillic"
         rel="stylesheet">
-    <link rel="icon" type="image/png" href="../img/cloud-256x256.png">
+    <!--===============================================================================================-->
+    <link rel="icon" type="image/png" href="../img/logo/favicon.png">
+    <!--===============================================================================================-->
     <link rel="stylesheet" href="../css/portfolio_style.css">
+    <!--===============================================================================================-->
     <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/animate.css/4.1.1/animate.min.css" />
+    <!--===============================================================================================-->
     <title>Portfolio</title>
 </head>
 
@@ -74,9 +78,8 @@
         </header>
 
         <div class="company_logo">
-            <img src='../img/cloud-256x256.png' width=50px />
+            <img src='../img/logo/iDigitalLogo.svg' width=250px />
         </div>
-        <div class="company_name">iDigital Web Studio</div>
 
 
         <!-- Breadcrumbs -->
