--- a/Services.html
+++ b/Services.html
@@ -18,7 +18,7 @@
     <link href="https://fonts.googleapis.com/css?family=Montserrat:300,400,500,700&display=swap&subset=cyrillic"
         rel="stylesheet">
     <!--===============================================================================================-->
-    <link rel="icon" type="image/png" href="img/cloud-256x256.png">
+    <link rel="icon" type="image/png" href="img/logo/favicon.png">
     <!--===============================================================================================-->
     <link rel="stylesheet" href="css/services_style.css">
     <!--===============================================================================================-->
@@ -28,7 +28,9 @@
         integrity="sha256-9/aliU8dGd2tb6OSsuzixeV4y/faTqgFtohetphbbj0=" crossorigin="anonymous"></script>
     <!--===============================================================================================-->
     <link rel="stylesheet" href="css/fadeBlock.css">
+    <!--===============================================================================================-->
     <link rel="stylesheet" media="all" href="css/animate.css">
+    <!--===============================================================================================-->
     <title>Services</title>
 </head>
 
