--- a/Services/Web_design.html
+++ b/Services/Web_design.html
@@ -27,9 +27,15 @@
     <meta name="format-detection" content="telephone=no">
     <link href="https://fonts.googleapis.com/css?family=Montserrat:300,400,500,700&display=swap&subset=cyrillic"
         rel="stylesheet">
+    <!--===============================================================================================-->
+    <link rel="icon" type="image/png" href="../img/logo/favicon.png">
+    <!--===============================================================================================-->
     <link rel="stylesheet" href="../css/services_subpage_style.css">
+    <!--===============================================================================================-->
     <link rel="stylesheet" href="../css/fadeBlock.css">
+    <!--===============================================================================================-->
     <link rel="stylesheet" media="all" href="../css/animate.css">
+    <!--===============================================================================================-->
     <title>Web Design</title>
 </head>
 
