--- a/others/Contacts.html
+++ b/others/Contacts.html
@@ -5,11 +5,16 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <meta name="format-detection" content="telephone=no">
+    <!--===============================================================================================-->
     <link href="https://fonts.googleapis.com/css?family=Montserrat:300,400,500,700&display=swap&subset=cyrillic"
         rel="stylesheet">
-    <link rel="icon" type="image/png" href="img/cloud-256x256.png">
+    <!--===============================================================================================-->
+    <link rel="icon" type="image/png" href="../img/logo/favicon.png">
+    <!--===============================================================================================-->
     <link rel="stylesheet" href="css/contacts_style.css">
+    <!--===============================================================================================-->
     <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/bootstrap@4.5.3/dist/css/bootstrap.min.css" integrity="sha384-TX8t27EcRE3e/ihU7zmQxVncDAy5uIKz4rEkgIXeMed4M0jlfIDPvg6uqKI2xXr2" crossorigin="anonymous">
+    <!--===============================================================================================-->
     <title>Contact</title>
 </head>
 
