home page update

--- a/Works.html
+++ b/Works.html
@@ -99,7 +99,7 @@
         <!-- Block_1 -->
 
         <!-- MAIN (Center website) -->
-        <div class="main fadeInUp animated">
+        <div class="main">
 
             <div id="myBtnContainer">
                 <button class="btn active" onclick="filterSelection('all')"> Show all</button>
