Website - Finished - Final - January 31 - 2021

--- a/Services/Branding.html
+++ b/Services/Branding.html
@@ -118,7 +118,7 @@
                 <h4> Need a Fresh Way to Grab Attention of Your Customers or Find New Ones? </h4>
             </div>
             <div class="block_1_text">
-                <p> Branding is fundamental for every company, no matter what its field might be.
+                <p> Branding is fundamental for every company, no matter what this field might be.
                     It could be products or services. Branding is equally important and it needs to run smoothly, at
                     all costs.
                     Right branding strategy can not only grow your company’s profits, but also help your business
@@ -126,8 +126,8 @@
 
                 <p> Using latest methods of design thinking, together with the client, we form an integral brand
                     platform that allows the company to reach a new level of development, clearly aware of its
-                    competitive advantages and values. <span class="textHighlight"> Contact Us Today to Learn More.
-                        </span></p>
+                    competitive advantages and values.
+                    <a class="textHighlight" href='../ContactFrom_v6/Contacts.html' target="_blank">Contact Us Today to Learn More</a>
             </div>
         </div>
     </div>
