--- a/Services/Ecommerce.html
+++ b/Services/Ecommerce.html
@@ -127,8 +127,8 @@
                 <p> eCommerce is no longer seen as an option. It is a necessary tool for the development of a
                     business selling goods or services. While developing an online store, we will provide
                     integration of all necessary services: payment systems; CRM-systems; delivery;
-                    analytical software; contact forms, etc. <span class="textHighlight"> Contact Us Today to Learn
-                            More. </span></p>
+                    analytical software; contact forms, etc.
+                <a class="textHighlight" href='../ContactFrom_v6/Contacts.html' target="_blank">Contact Us Today to Learn More</a>
             </div>
         </div>
     </div>
