--- a/index.html
+++ b/index.html
@@ -174,7 +174,7 @@
             <div class="block2Text1">
                 <p class="block2Text1"> We are creative Web Developing Company, located in Toronto, that turns your
                     ideas into a new driving force
-                    of your business. Our mission is to help your business grow and evolve</p>
+                    of your business. Our mission is to help your business grow and evolve.</p>
             </div>
             <div class="block2Text2">
                 <p>We develop websites on turnkey basis different complexity, from landing page to a fully functional
@@ -188,7 +188,7 @@
             </div>
 
             <div class="block2Text3">
-                <p>Contact Us Now to Learn More</p>
+                <a href='./ContactFrom_v6/Contacts.html' target="_blank">Contact Us Now to Learn More</a>
             </div>
             <div class="block2Text4">
                 <p>+1-647-676-3661
