--- a/About.html
+++ b/About.html
@@ -157,13 +157,13 @@
             always go an extra-mile and provide provide full support for the launched projects.</p>
 
         <p class="textHighlight">Technologies:
-        <p class="textResponsive">HTML5, CSS3, JavaScript, PHP, MySQL, JavaScript/ NodeJS,
-            TypeScript, Git, React/Redux, Bootstrap.</p> <br>
+        <p class="textResponsive">HTML5, CSS3, JavaScript, jQuery, Bootstrap, PHP, MySQL, NodeJS,
+            TypeScript, Git, React/Redux, Laravel.</p> <br>
 
         <p class="textHighlight">Builders:
         <p class="textResponsive">WIX, Tilda, WordPress, Squarespace, LP.</p> <br>
 
-        <p class="textHighlight">Contact Us
+            <a class="textHighlight" href='./ContactFrom_v6/Contacts.html' target="_blank">Contact Us</a>
         <p class="textResponsive">today and get a free quote.</p>
 
     </div>
@@ -198,10 +198,13 @@
 
     <div class="map_responsive fadeInUp animated">
         <iframe
-                src="https://www.google.com/maps/embed?pb=!1m18!1m12!1m3!1d2887.469531426341!2d-79.44780988427743!3d43.638398661405276!2m3!1f0!2f0!3f0!3m2!1i1024!2i768!4f13.1!3m3!1m2!1s0x882b35b64b4b86bf%3A0xfcf3fe447854fc4c!2s2080%20King%20St%20W%2C%20Toronto%2C%20ON%20M6K%201J7!5e0!3m2!1sen!2sca!4v1603856696910!5m2!1sen!2sca"
+                src="https://www.google.com/maps/embed?pb=!1m18!1m12!1m3!1d4083.28632784349!2d-79.5599158579109!3d43.64152159986878!2m3!1f0!2f0!3f0!3m2!1i1024!2i768!4f13.1!3m3!1m2!1s0x882b378a1ddcfa6b%3A0xe29a22e4b21d9816!2s2%20Valhalla%20Inn%20Rd%2C%20Etobicoke%2C%20ON%20M9B%206C3!5e0!3m2!1sen!2sca!4v1612138150833!5m2!1sen!2sca"
                 width="800" height="600" frameborder="0" style="border:0;" allowfullscreen="" aria-hidden="false"
                 tabindex="0"></iframe>
     </div>
+
+
+
 
 
     <!-- Creating Scroll Up Button -->
