--- a/Works.html
+++ b/Works.html
@@ -86,7 +86,7 @@
     <div class="breadcrumbs_container">
         <div class="breadcrumbs_row">
             <h4 class="breadcrumbs_title">
-                Works </h4>
+                Portfolio </h4>
             <ol class="breadcrumb">
                 <li class="first-item">
                     <a href='./index.html' style="font-size: 10pt;">Home</a>
