feb-4-2021 - bugs fixed

--- a/About.html
+++ b/About.html
@@ -146,8 +146,8 @@
     <!-- Block_3 -->
 
     <div class="block_3_row fadeInUp animated">
-        <p class="textHighlight">Our main goal
-        <p class="textResponsive"> - help your business grow and perform in a better way.</p>
+        <p class="textHighlight">Our main goal:
+        <p class="textResponsive"> Help your business grow and perform in a better way.</p>
 
         <p class="textResponsive">We provide industry specific complex solutions based on your business needs.
             We provide solutions for all types
@@ -208,7 +208,7 @@
 
 
     <!-- Creating Scroll Up Button -->
-    <div class="topNubex" id="topNubex"><i class="fa fa-angle-double-up fa-2x"></i></div>
+    <div class="topNubex" id="topNubex"><i class="fa fa-angle-double-up fa-4x"></i></div>
 
 
     <!-- Footer -->
@@ -216,30 +216,28 @@
     <footer>
         <div class="footer">
             <div class="footerRow">
-                <div class="footerColumn">
-                </div>
+
                 <div class="footerColumn">
                     <div class="footer_icon_wrap icon1">
                         <img src='img/icons/dark_icon_1.png'>
                     </div>
-                    <p class="textResponsive" style="font-size: 14pt"> 2 Valhalla Inn Rd., Toronto,<br> Ontario,
-                        Canada</p>
+                    <p class="textResponsive"> 2 Valhalla Inn Rd., Toronto,<br> Ontario, Canada
+                    </p>
                 </div>
                 <div class="footerColumn">
                     <div class="footer_icon_wrap">
                         <img src='img/icons/dark_icon_2.png'>
                     </div>
-                    <a class="email-text" style="font-size: 14pt"
+                    <a class="email-text"
                        href="mailto:sales@idigitalstudio.ca">sales@idigitalstudio.ca</a>
                 </div>
                 <div class="footerColumn">
                     <div class="footer_icon_wrap">
                         <img src='img/icons/dark_icon_3.png'>
                     </div>
-                    <p class="phoneFoot" style="font-size: 14pt"> Phone: +1-647-676-3661 </p>
+                    <p class="phoneFoot"> Phone: +1-647-676-3661 </p>
                 </div>
-                <div class="footerColumn">
-                </div>
+
             </div>
     </footer>
 </div>
