--- a/Portfolio/Enlight.html
+++ b/Portfolio/Enlight.html
@@ -114,7 +114,7 @@
                 to the
                 business. Agency builds brands, raise profiles, makes new businesses attractive to investors, and
                 helps them raise money.</p>
-            <p>Visit Website at : <a href='http://project958422.tilda.ws/' class="portfolioLink">Enlight</a></p>
+            <p>Visit Website at : <a href='http://project958422.tilda.ws/' class="portfolioLink">Enlight</a></p> <br>
             <p>Technologies Used: HTML5, CSS3, JavaScript, PHP, MySQL</p>
         </div>
     </div>
@@ -122,13 +122,13 @@
 
     <!-- Block_2 -->
 
-    <div class="slideshow-container">
+    <div class="slideshow-container  fadeInUp animated">
 
         <div class="reviewHeader">What People Say About Us</div>
 
         <div class="mySlides">
             <q>iDigital Web Studio delivered a functional, mobile-friendly site that has me significantly expand my
-                company.</q>
+                company.</q> <br>
             <p class="author">Thomas</p>
         </div>
 
@@ -137,20 +137,20 @@
                 experience to
                 a whole new level that you simply can't teach. The feedback from my customers are just as
                 astonished!
-                Thank you again, I know I definitely made the right choice!</q>
+                Thank you again, I know I definitely made the right choice!</q> <br>
             <p class="author">Timothy Collier</p>
         </div>
 
         <div class="mySlides">
             <q>Professional and efficient. They did an excellent work redesigning my website with very tight
                 deadline.
-                Individual customer approach and post sale service.</q>
+                Individual customer approach and post sale service.</q> <br>
             <p class="author">Justin</p>
         </div>
 
         <div class="mySlides">
             <q>Excellent service! I would highly recommend iDigital Studio for all your logo and other design
-                needs.</q>
+                needs.</q> <br>
             <p class="author">Alison Fagin</p>
         </div>
 
@@ -160,7 +160,7 @@
 
     </div>
 
-    <div class="dot-container">
+    <div class="dot-container fadeInUp animated">
         <span class="dot" onclick="currentSlide(1)"></span>
         <span class="dot" onclick="currentSlide(2)"></span>
         <span class="dot" onclick="currentSlide(3)"></span>
@@ -169,7 +169,7 @@
 
 
     <!-- Creating Scroll Up Button -->
-    <div class="topNubex" id="topNubex"><i class="fa fa-angle-double-up fa-2x"></i></div>
+    <div class="topNubex" id="topNubex"><i class="fa fa-angle-double-up fa-4x"></i></div>
 
 
     <!-- Footer -->
@@ -177,29 +177,28 @@
     <footer>
         <div class="footer">
             <div class="footerRow">
-                <div class="footerColumn">
-                </div>
+
                 <div class="footerColumn">
                     <div class="footer_icon_wrap icon1">
                         <img src='../img/icons/dark_icon_1.png'>
                     </div>
-                    <p style="font-size: 14pt"> 2 Valhalla Inn Rd., Toronto,<br> Ontario, Canada</p>
+                    <p class="textResponsive"> 2 Valhalla Inn Rd., Toronto,<br> Ontario, Canada
+                    </p>
                 </div>
                 <div class="footerColumn">
                     <div class="footer_icon_wrap">
                         <img src='../img/icons/dark_icon_2.png'>
                     </div>
-                    <a class="email-text" style="font-size: 14pt"
+                    <a class="email-text"
                        href="mailto:sales@idigitalstudio.ca">sales@idigitalstudio.ca</a>
                 </div>
                 <div class="footerColumn">
                     <div class="footer_icon_wrap">
                         <img src='../img/icons/dark_icon_3.png'>
                     </div>
-                    <p class="phoneFoot" style="font-size: 14pt"> Phone: +1-647-676-3661 </p>
+                    <p class="phoneFoot"> Phone: +1-647-676-3661 </p>
                 </div>
-                <div class="footerColumn">
-                </div>
+
             </div>
     </footer>
 </div>
