--- a/index.html
+++ b/index.html
@@ -3,7 +3,7 @@
 
 <head>
     <meta charset="UTF-8">
-    <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <meta name="viewport" content="width=device-width">
     <meta http-equiv="X-UA-Compatible" content="ie=edge">
     <link rel="stylesheet" href="css/index_reset.css">
     <link href="https://fonts.googleapis.com/css?family=Muli:300,400,700,900" rel="stylesheet">
@@ -315,7 +315,7 @@
         <div class="block4Column">
             <div class="contentWrapper wow zoomIn">
                 <div class="block4Picture">
-                    <a href="Portfolio/Vivis_organics.html"><img src='img/Portfolio_4.jpg' alt="Vivi's Organics"
+                    <a href="Portfolio/Vivis_organics.html"><img src='img/portfolio_4.jpg' alt="Vivi's Organics"
                                                                  style="width:100%"></a>
                 </div>
                 <h5 class="block4Logo">Vivi's Organics</h5>
@@ -455,30 +455,28 @@
     <footer>
         <div class="footer">
             <div class="footerRow">
-                <div class="footerColumn">
-                </div>
+
                 <div class="footerColumn">
                     <div class="footer_icon_wrap icon1">
                         <img src='img/icons/dark_icon_1.png'>
                     </div>
-                    <p class="textResponsive" style="font-size: 14pt"> 2 Valhalla Inn Rd., Toronto,<br> Ontario, Canada
+                    <p class="textResponsive"> 2 Valhalla Inn Rd., Toronto,<br> Ontario, Canada
                     </p>
                 </div>
                 <div class="footerColumn">
                     <div class="footer_icon_wrap">
                         <img src='img/icons/dark_icon_2.png'>
                     </div>
-                    <a class="email-text" style="font-size: 14pt"
+                    <a class="email-text"
                        href="mailto:sales@idigitalstudio.ca">sales@idigitalstudio.ca</a>
                 </div>
                 <div class="footerColumn">
                     <div class="footer_icon_wrap">
                         <img src='img/icons/dark_icon_3.png'>
                     </div>
-                    <p class="phoneFoot" style="font-size: 14pt"> Phone: +1-647-676-3661 </p>
+                    <p class="phoneFoot"> Phone: +1-647-676-3661 </p>
                 </div>
-                <div class="footerColumn">
-                </div>
+
             </div>
     </footer>
 
