--- a/Portfolio/Telebot.html
+++ b/Portfolio/Telebot.html
@@ -110,7 +110,7 @@
             <p align="justify">Bot, shows COVID-19 statistics all over the world. Contains different filters by
                 countries, cities, etc.</p>
             <p>Visit Website at : <a href='https://github.com/Savazh/tele-bot-test'
-                                     class="portfolioLink">TeleBot</a></p>
+                                     class="portfolioLink">TeleBot</a></p> <br>
             <p>Technologies Used: PHP</p>
         </div>
     </div>
@@ -118,13 +118,13 @@
 
     <!-- Block_2 -->
 
-    <div class="slideshow-container">
+    <div class="slideshow-container  fadeInUp animated">
 
         <div class="reviewHeader">What People Say About Us</div>
 
         <div class="mySlides">
             <q>iDigital Web Studio delivered a functional, mobile-friendly site that has me significantly expand my
-                company.</q>
+                company.</q> <br>
             <p class="author">Thomas</p>
         </div>
 
@@ -133,20 +133,20 @@
                 experience to
                 a whole new level that you simply can't teach. The feedback from my customers are just as
                 astonished!
-                Thank you again, I know I definitely made the right choice!</q>
+                Thank you again, I know I definitely made the right choice!</q> <br>
             <p class="author">Timothy Collier</p>
         </div>
 
         <div class="mySlides">
             <q>Professional and efficient. They did an excellent work redesigning my website with very tight
                 deadline.
-                Individual customer approach and post sale service.</q>
+                Individual customer approach and post sale service.</q> <br>
             <p class="author">Justin</p>
         </div>
 
         <div class="mySlides">
             <q>Excellent service! I would highly recommend iDigital Studio for all your logo and other design
-                needs.</q>
+                needs.</q> <br>
             <p class="author">Alison Fagin</p>
         </div>
 
@@ -156,7 +156,7 @@
 
     </div>
 
-    <div class="dot-container">
+    <div class="dot-container fadeInUp animated">
         <span class="dot" onclick="currentSlide(1)"></span>
         <span class="dot" onclick="currentSlide(2)"></span>
         <span class="dot" onclick="currentSlide(3)"></span>
@@ -165,7 +165,7 @@
 
 
     <!-- Creating Scroll Up Button -->
-    <div class="topNubex" id="topNubex"><i class="fa fa-angle-double-up fa-2x"></i></div>
+    <div class="topNubex" id="topNubex"><i class="fa fa-angle-double-up fa-4x"></i></div>
 
 
     <!-- Footer -->
@@ -173,29 +173,28 @@
     <footer>
         <div class="footer">
             <div class="footerRow">
-                <div class="footerColumn">
-                </div>
+
                 <div class="footerColumn">
                     <div class="footer_icon_wrap icon1">
                         <img src='../img/icons/dark_icon_1.png'>
                     </div>
-                    <p style="font-size: 14pt"> 2 Valhalla Inn Rd., Toronto,<br> Ontario, Canada</p>
+                    <p class="textResponsive"> 2 Valhalla Inn Rd., Toronto,<br> Ontario, Canada
+                    </p>
                 </div>
                 <div class="footerColumn">
                     <div class="footer_icon_wrap">
                         <img src='../img/icons/dark_icon_2.png'>
                     </div>
-                    <a class="email-text" style="font-size: 14pt"
+                    <a class="email-text"
                        href="mailto:sales@idigitalstudio.ca">sales@idigitalstudio.ca</a>
                 </div>
                 <div class="footerColumn">
                     <div class="footer_icon_wrap">
                         <img src='../img/icons/dark_icon_3.png'>
                     </div>
-                    <p class="phoneFoot" style="font-size: 14pt"> Phone: +1-647-676-3661 </p>
+                    <p class="phoneFoot"> Phone: +1-647-676-3661 </p>
                 </div>
-                <div class="footerColumn">
-                </div>
+
             </div>
     </footer>
 </div>
