--- a/Works.html
+++ b/Works.html
@@ -136,7 +136,7 @@
 
             <div class="column branding">
                 <div class="content">
-                    <a href="Portfolio/Vivis_organics.html"><img mg src='img/Portfolio_4.jpg' class="overlay"
+                    <a href="Portfolio/Vivis_organics.html"><img mg src='img/portfolio_4.jpg' class="overlay"
                                                                  alt="Vivi's Organics" style="width:100%"></a>
                     <div><a href="Portfolio/Vivis_organics.html">Vivi's Organics</a></div>
                     <p>Online Store selling organic cosmetics products for woman for all types of skin</p>
@@ -192,7 +192,7 @@
 
 
     <!-- Creating Scroll Up Button -->
-    <div class="topNubex" id="topNubex"><i class="fa fa-angle-double-up fa-2x"></i></div>
+    <div class="topNubex" id="topNubex"><i class="fa fa-angle-double-up fa-4x"></i></div>
 
 
     <!-- Footer -->
@@ -200,29 +200,28 @@
     <footer>
         <div class="footer">
             <div class="footerRow">
-                <div class="footerColumn">
-                </div>
+
                 <div class="footerColumn">
                     <div class="footer_icon_wrap icon1">
                         <img src='img/icons/dark_icon_1.png'>
                     </div>
-                    <p style="font-size: 14pt"> 2 Valhalla Inn Rd., Toronto,<br> Ontario, Canada</p>
+                    <p class="textResponsive"> 2 Valhalla Inn Rd., Toronto,<br> Ontario, Canada
+                    </p>
                 </div>
                 <div class="footerColumn">
                     <div class="footer_icon_wrap">
                         <img src='img/icons/dark_icon_2.png'>
                     </div>
-                    <a class="email-text" style="font-size: 14pt"
+                    <a class="email-text"
                        href="mailto:sales@idigitalstudio.ca">sales@idigitalstudio.ca</a>
                 </div>
                 <div class="footerColumn">
                     <div class="footer_icon_wrap">
                         <img src='img/icons/dark_icon_3.png'>
                     </div>
-                    <p class="phoneFoot" style="font-size: 14pt"> Phone: +1-647-676-3661
+                    <p class="phoneFoot"> Phone: +1-647-676-3661 </p>
                 </div>
-                <div class="footerColumn">
-                </div>
+
             </div>
     </footer>
 </div>
